@@ -5,36 +5,11 @@ GOPATH := $(CURDIR)/$(_GOPATH)
 GO=go
 HOCKEYPATH=$(GOPATH)/src/launchpad.net/hockeypuck
 
-all: get \
-	$(HOCKEYPATH)/cmd/hockeypuck-mgo/hockeypuck-mgo \
-	$(HOCKEYPATH)/cmd/hockeypuck-load/hockeypuck-load
-
-# 'get' resolves & fetches dependencies into our build $GOPATH
-get: $(HOCKEYPATH)/mgo
-
-$(HOCKEYPATH)/pq: $(GOPATH)/src/github.com/bmizerany/pq
-	@echo GOPATH is $(GOPATH)
-	mkdir -p $(GOPATH)
-	GOPATH="${GOPATH}" $(GO) get launchpad.net/hockeypuck/pq
-
-$(GOPATH)/src/github.com/bmizerany/pq:
-	@echo GOPATH is $(GOPATH)
-	mkdir -p $(GOPATH)
-	GOPATH="${GOPATH}" $(GO) get github.com/bmizerany/pq
-
-$(HOCKEYPATH)/mgo:
-	@echo GOPATH is $(GOPATH)
-	mkdir -p $(GOPATH)
-	GOPATH="${GOPATH}" $(GO) get launchpad.net/hockeypuck/mgo
-
-$(HOCKEYPATH)/cmd/hockeypuck-mgo/hockeypuck-mgo:
-	cd $(HOCKEYPATH)/cmd/hockeypuck-mgo; GOPATH="${GOPATH}" $(GO) build .
-
-$(HOCKEYPATH)/cmd/hockeypuck-pq/hockeypuck-pq:
-	cd $(HOCKEYPATH)/cmd/hockeypuck-pq; GOPATH="${GOPATH}" $(GO) build .
-
-$(HOCKEYPATH)/cmd/hockeypuck-load/hockeypuck-load:
-	cd $(HOCKEYPATH)/cmd/hockeypuck-load; GOPATH="${GOPATH}" $(GO) build .
+all:
+	GOPATH="${GOPATH}" $(GO) get launchpad.net/hockeypuck/cmd/hockeypuck-mgo
+	GOPATH="${GOPATH}" $(GO) install launchpad.net/hockeypuck/cmd/hockeypuck-mgo
+	GOPATH="${GOPATH}" $(GO) get launchpad.net/hockeypuck/cmd/hockeypuck-load
+	GOPATH="${GOPATH}" $(GO) install launchpad.net/hockeypuck/cmd/hockeypuck-load
 
 debsrc: debbin clean
 	debuild -S
@@ -43,8 +18,7 @@ debbin:
 	debuild -us -uc -i -b
 
 clean:
-	$(RM) $(HOCKEYPATH)/cmd/hockeypuck-mgo/hockeypuck-mgo
-	$(RM) $(HOCKEYPATH)/cmd/hockeypuck-load/hockeypuck-load
+	$(RM) -r $(GOPATH)/bin $(GOPATH)/pkg
 
 srcclean:
 	$(RM) -r $(GOPATH)
