@@ -10,8 +10,8 @@
 #export DH_VERBOSE=1
 
 override_dh_install:
-	dh_install gopath/src/launchpad.net/hockeypuck/cmd/hockeypuck-mgo/hockeypuck-mgo /usr/bin/
-	dh_install gopath/src/launchpad.net/hockeypuck/cmd/hockeypuck-load/hockeypuck-load /usr/bin/
+	dh_install gopath/bin/hockeypuck-mgo /usr/bin/
+	dh_install gopath/bin/hockeypuck-load /usr/bin/
 	dh_install etc/init/hockeypuck-mgo.conf /etc/init
 	dh_install www /var/lib/hockeypuck
 	dh_install man/man1/hockeypuck-mgo.1 /usr/share/man/man1
